--- a/_posts/2022-11-27-tasks.md
+++ b/_posts/2022-11-27-tasks.md
@@ -111,13 +111,13 @@ t2.set_upstream(t1)
 비트 시프트 연산자를 사용하여 작업을 연결할 수도 있습니다.:
 t1 >> t2
 
-# 그리고 비트 시프트 연산자와의 업스트림 종속성 표기:
+그리고 비트 시프트 연산자와의 업스트림 종속성 표기:
 t2 << t1
 
-# 여러 종속성을 연결하는 것은 비트 시프트 연산자로 간결해집니다.
+여러 종속성을 연결하는 것은 비트 시프트 연산자로 간결해집니다.
 t1 >> t2 >> t3
 
-# 작업 목록을 종속성으로 설정할 수도 있습니다. 이러한 작업은 모두 동일한 효과를 갖습니다.:
+작업 목록을 종속성으로 설정할 수도 있습니다. 이러한 작업은 모두 동일한 효과를 갖습니다.:
 t1.set_downstream([t2, t3])
 t1 >> [t2, t3]
 [t2, t3] << t1
