--- a/_posts/workflow/2022-11-27-dag-type.md
+++ b/_posts/workflow/2022-11-27-dag-type.md
@@ -10,7 +10,7 @@ tags:
 ## Install local-storage-class to kubernetes
 Apache Airflow에서 DAG을 선언하는 다음과 같이 3가 유형이 있습니다.
 
-- with DAG
+1. with DAG
 
 ```python 
 with DAG (
@@ -23,7 +23,38 @@ with DAG (
 
 ```
 
-- 표준 생성자 유형
+- with DAG 예시 
+
+```python
+from airflow.models import DAG 
+from airflow.providers.http.sensors.http import HttpSensor
+from datetime import datetime, timedelta
+
+default_args = {
+    "owner": "airflow",
+    "email_on_failure": False,
+    "email_on_retry": False,
+    "email": "admin@localhost.com",
+    "retries": 1,
+    "retry_delay": timedelta(minutes=5)
+}
+
+with DAG("date_pipeline_ex02", 
+  start_date=datetime(2022,11,17),
+  schedule_interval="@daily",
+  default_args = default_args,
+  catchup=False
+) as dag:
+  is_api_available = HttpSensor(
+    task_id='is_api_available',
+    http_conn_id='user_api',
+    endpoint='api/'
+  )
+
+  is_api_available
+```
+
+1. 표준 생성자 DAG
 
 ```python
 dag=DAG (
@@ -35,8 +66,44 @@ dag=DAG (
 start = EmptyOperator(task_id=”start”, dag=dag)
 
 ```
+- 표준 생성자 DAG 예시
 
-- 데코레이터 유형(@)
+```python
+
+from airflow import DAG 
+from datetime import datetime, timedelta 
+from airflow.operators.bash import BashOperator 
+from airflow.utils.dates import days_ago 
+import pendulum
+
+# timezone 한국시간으로 변경
+kst = pendulum.timezone("Asia/Seoul")
+
+default_args = {
+    "start_date": days_ago(1),
+    "catchup": False,
+}
+
+dag = DAG(
+    "myFirstDAG",
+    default_args=default_args,
+    schedule_interval="@daily"
+)
+
+def hello_airflow():
+    print("Hello airflow")
+
+t1 = BashOperator(
+    task_id="bash",
+    bash_command="echo Hello airflow",
+    dag=dag
+)
+
+t1
+```
+
+
+3. 데코레이터 DAG(@)
 
 ```
 @dag (
@@ -55,4 +122,30 @@ def hello_dag():
 dag = hello_dag()
 
 ```
+- 데코레이터 예시
 
+```
+from airflow.decorators import dag, task 
+from datetime import datetime, timedelta 
+from airflow.utils.dates import days_ago 
+
+default_args = {
+    "start_date": days_ago(1),
+    "catchup": False,
+}
+
+@dag (
+    dag_id='data_pipeline_ex05',
+       default_args = default_args,
+       schedule_interval='@daily'
+) 
+def hello_dag():
+    @task
+    def hello_task1():
+        print('Hello World')
+
+    hello_task1()
+
+# DAG 호출
+dag = hello_dag()
+```
