--- a/_posts/workflow/2022-11-27-tasks.md
+++ b/_posts/workflow/2022-11-27-tasks.md
@@ -105,7 +105,8 @@ t1, t2, t3 task가 순차적으로 실행됩니다.
 
 t1.set_downstream(t2)
 
-t2는 성공적으로 실행되는 t1에 의존하여 실행됩니다..
+t2는 성공적으로 실행되는 t1에 의존하여 실행됩니다.
+
 t2.set_upstream(t1)
 
 비트 시프트 연산자를 사용하여 작업을 연결할 수도 있습니다.:
@@ -117,7 +118,11 @@ t2 << t1
 여러 종속성을 연결하는 것은 비트 시프트 연산자로 간결해집니다.
 t1 >> t2 >> t3
 
-작업 목록을 종속성으로 설정할 수도 있습니다. 이러한 작업은 모두 동일한 효과를 갖습니다.:
+작업 목록을 종속성으로 설정할 수도 있습니다. 
+이러한 작업은 모두 동일한 효과를 갖습니다
+
+```python
 t1.set_downstream([t2, t3])
 t1 >> [t2, t3]
 [t2, t3] << t1
+```
