--- a/_posts/workflow/2022-11-27-xcom.md
+++ b/_posts/workflow/2022-11-27-xcom.md
@@ -1,5 +1,5 @@
 ---
-title: Airflow Xcon
+title: Airflow Xcom
 categories:
   - workflow
 tags:
@@ -38,11 +38,6 @@ default_args = {
   'catchup': False
 } 
 
-dag = DAG(
-  dag_id='xcom_dag', 
-  default_args = default_args 
-) 
-
 def xcom_push(**context):
   context['task_instance'].xcom_push(
     key='pushed_value',
@@ -54,6 +49,11 @@ def pull_func(**context):
     task_ids='push_by_xcom'
   )
   print(value)
+
+dag = DAG(
+  dag_id='xcom_dag', 
+  default_args = default_args 
+) 
 
 push_by_xcom = PythonOperator(
   task_id='push_by_xcom',
