--- a/_posts/workflow/2022-11-27-xcom.md
+++ b/_posts/workflow/2022-11-27-xcom.md
@@ -18,7 +18,7 @@ def pull_func(**context):
   value=context[‘ti’].xcom_pull(key=변수명, task_ids=대상 Task이름)
 
 ```
-- Xcon 예시
+- Xcom 예시
 
 ```python
 from airflow import DAG 
