--- a/_posts/workflow/2022-11-27-dag-type.md
+++ b/_posts/workflow/2022-11-27-dag-type.md
@@ -10,7 +10,7 @@ tags:
 ## Install local-storage-class to kubernetes
 Apache Airflow에서 DAG을 선언하는 다음과 같이 3가 유형이 있습니다.
 
-1. with DAG
+1. with DAG (Recommendation)
 
 ```python 
 with DAG (
