Replace artifactory-oss to artifactory-cpp-ce

--- a/_posts/docker/2023-01-29-jfrog.md
+++ b/_posts/docker/2023-01-29-jfrog.md
@@ -17,7 +17,7 @@ Docker 기반 JFrog를 설치합니다.
 
 ## Step 2 : JFrog Artifactory Docker Image 를 download  
 ```bash
-docker pull docker.bintray.io/jfrog/artifactory-oss:latest
+ docker pull docker.bintray.io/jfrog/artifactory-pro:latest
 ```
 
 For CE edition:
@@ -30,9 +30,8 @@ docker images
 
 docker images "*/jfrog/*"
 -------------------------------------------------------------------------------------------
-REPOSITORY                                   TAG       IMAGE ID       CREATED       SIZE
-docker.bintray.io/jfrog/artifactory-cpp-ce   latest    407fa40e86ef   2 weeks ago   1.55GB
-docker.bintray.io/jfrog/artifactory-oss      latest    e337af54f237   2 weeks ago   1.48G
+REPOSITORY                                   TAG       IMAGE ID       CREATED      SIZE
+docker.bintray.io/jfrog/artifactory-cpp-ce   latest    82ca33a84e75   5 days ago   1.55GB
 
 ```
 ## Step 3 : Create Data Directory
@@ -48,13 +47,13 @@ Artifactory 컨테이너를 시작하려면 다음 명령을 사용하십시오.
 ```bash
 docker run --name artifactory -d -p 8081:8081 -p 8082:8082 \
 -v /jfrog/artifactory:/var/opt/jfrog/artifactory \
-docker.bintray.io/jfrog/artifactory-oss:latest
+docker.bintray.io/jfrog/artifactory-cpp-ce
 
 
 docker ps
 ---------------------------------------------------------------------------
 CONTAINER ID   IMAGE                                            COMMAND                  CREATED         STATUS         PORTS                                                           NAMES
-29c549fecd50   docker.bintray.io/jfrog/artifactory-oss:latest   "/entrypoint-artifac…"   9 minutes ago   Up 9 minutes   0.0.0.0:8081-8082->8081-8082/tcp, :::8081-8082->8081-8082/tcp   artifactory
+29c549fecd50   docker.bintray.io/jfrog/artifactory-cpp-ce:latest   "/entrypoint-artifac…"   9 minutes ago   Up 9 minutes   0.0.0.0:8081-8082->8081-8082/tcp, :::8081-8082->8081-8082/tcp   artifactory
 ```
 
 ## Step 5 : Running JFrog Artifactory container with Systemd
