Add nexus admin

--- a/_posts/docker/2023-01-29-nexus.md
+++ b/_posts/docker/2023-01-29-nexus.md
@@ -10,6 +10,11 @@ tags:
 Centos7 기반 Docker Engine을 설치합니다.  
 성
 ## Step 1: docker-compose 파일 작성
+nexus container 의 데이터를 저장할 폴더를 생성합니다.  
+```bash
+mkdir ./nexus-data
+```
+
 vi editor 로 docker-compose.yaml 파일을 아래와 같이 작성합니다.
 
 ```bash
@@ -41,3 +46,28 @@ docker-compose up 을 background 로 실행합니다.
 ```bash
 docker-compose up -d
 ```
+
+## step 3 : nexus admin 로그인
+브라우저에서 nexus 8081 포트를 접속하여 오른쪽 상단위 로그인(signin) 버튼을 클릭하여 admin으로 접속합니다.  
+
+![nexus home]({{ "/assets/images/nexus/01-jenkins-nexus-home.png" }})
+
+Setup 화면에서 Next 버튼을 클릭합니다.  
+
+![nexus admin]({{ "/assets/images/nexus/02-jenkins-nexus-admin-1.png" }})
+
+admin 사용자의 비밀번호를 입력하고, Next 버튼을 클릭합니다.  
+
+![nexus admin]({{ "/assets/images/nexus/02-jenkins-nexus-admin-2.png" }})
+
+admin 사용자의 새로운 비밀번호를 입력하고, Next 버튼을 클릭합니다.  
+
+![nexus admin]({{ "/assets/images/nexus/02-jenkins-nexus-admin-3.png" }})
+
+Anonymous 접근을 허용하지 않기 위해 Disable anonymous access 를 선택하고, Next 버튼을 클릭합니다.   
+
+![nexus admin]({{ "/assets/images/nexus/02-jenkins-nexus-admin-anonymous.png" }})
+
+Complete 화면에서 finish 버튼을 클릭합니다.    
+
+![nexus admin]({{ "/assets/images/nexus/02-jenkins-nexus-admin-4.png" }})
