Add docker engine

--- a/_posts/docker/2023-01-29-docker.md
+++ b/_posts/docker/2023-01-29-docker.md
@@ -61,6 +61,10 @@ vi ~/.bash_profile
 DOCKER_CONFIG=/usr/local/lib/docker
 PATH=$PATH:$HOME/bin:$DOCKER_CONFIG/cli-plugins
 ```
+추가한 script 설정을 다시 적용합니다.  
+```bash
+source ~/.bash_profile 
+```
 
 docker-compose가  정상적으로 설치되었는지 docker-compose 명령어를 실행해 봅니다.  
 ```bash
