--- a/_posts/springboot/2023-03-12-aop-2.md
+++ b/_posts/springboot/2023-03-12-aop-2.md
@@ -1,5 +1,5 @@
 ---
-title: AOP(Aspect Oriented Programming) 이해 - 구성요소
+title: AOP(Aspect Oriented Programming) 구성요소
 categories:
   - springboot
 tags: 
