--- a/_posts/springboot/2023-03-12-aop.md
+++ b/_posts/springboot/2023-03-12-aop.md
@@ -7,6 +7,9 @@ tags:
 ---
 
 ## AOP 개요
+
+![filter interceptor aop]({{ "/assets/images/springboot/04-spring-filter-interceptor-aop-resolver-advice.png" }})
+
 AOP 란 관점 지향 프로그래밍입니다. 처음에 관점 지향이라고 하면 쉽게 머리속에 그려지지 않습니다.
 개발을 하면서 layer 아래와 같이 Three layer로 구성하여 구현할 때 layer별로 아래와 같은 기능을 처리해야 하는 경우
 - logging
