--- a/_posts/docker/2023-03-27-jupyter.md
+++ b/_posts/docker/2023-03-27-jupyter.md
@@ -18,3 +18,19 @@ docker run -it --rm -p 10000:8888 -v "${PWD}":/home/jovyan/work jupyter/datascie
 ```bash
 docker run -p 10000:8888 jupyter/scipy-notebook
 ```
+
+## Run Jupyter using docker-compose
+docker-compose를 사용하여 Jupyter를 실행합니다.  
+
+```yaml
+version: "3.9"
+
+services:
+  jupyter:
+    container_name: jupyter
+    image: jupyter/datascience-notebook
+    ports:
+      - "10000:8888"
+    volumes:
+      - ${PWD}:/home/jovyan/work
+```
