add kafkacat cheatsheet

--- a/_posts/kafka/2024-12-12-kafkacat.md
+++ b/_posts/kafka/2024-12-12-kafkacat.md
@@ -6,8 +6,14 @@ tags:
   - kafkacat
 ---
 
-## Commands:
-#### Producer
+카프카캣은 kafka producer/consumer 도구이며, 카프카캣을 얼마나 쉽게 사용할 수 있는지, 그리고 카프카캣으로 어떤 멋진 일을 할 수 있는지 설명 합니다.
+
+<figure style="width: 100%" class="align-center">
+  <img src="{{ site.url }}{{ site.baseurl }}/assets/images/kafka/kafkacat-cheatsheet.png" alt="">
+  <figcaption></figcaption>
+</figure> 
+
+## Producer
 Basic Usage
 Produce a Message :
 ```bash
@@ -16,7 +22,21 @@ kafkacat -b <broker> -t <topic> -P
 -t: Specify the target topic.
 -P: Enter the producer mode
 ```
-#### Consumer 
+
+다음 명령은 stdin에서 입력을 읽고 테스트 토픽에 메시지를 게시하는 kafkacat Docker 컨테이너를 만듭니다. 토픽은 사용 시 자동으로 생성됩니다.
+```bash
+docker run -it --network host edenhill/kafkacat:1.5.0 \
+				-b kafka:9092 \
+				-t testuser01 \
+				-P
+```
+
+docker run -it --network kafka-net edenhill/kafkacat:1.5.0 \
+				-b kafka:9092 \
+				-t testuser01  \
+				-P
+
+## Consumer 
 ```bash
 kafkacat -b <broker> -t <topic> -C
 -b: Specify Kafka broker(s).
