Add kafkacat manual

--- a/_posts/kafka/2024-12-12-kafkacat.md
+++ b/_posts/kafka/2024-12-12-kafkacat.md
@@ -18,6 +18,15 @@ tags:
 카프카캣에는 꽤 많은 매개변수가 있어 모두 익히는 것이 무섭게 느껴질 수도 있지만, 대부분의 매개변수는 의미가 있고 기억하기 쉽습니다. 가장 중요한 모드부터 시작하겠습니다. 카프카캣으로 전화를 걸 때는 항상 네 가지 모드 중 하나를 사용하게 됩니다. 모든 모드는 대문자를 사용합니다:  
 
 ```bash
+docker run --tty \
+    --network host \
+    confluentinc/cp-kafkacat \
+    kafkacat -b kafka:9092 -C -K: \
+    -f '\nKey (%K bytes): %k\t\nValue (%S bytes): %s\n\Partition: %p\tOffset: %o\n--\n' \
+    -t testuser01
+```
+
+```bash
 - -P = Produce data
 - -C = Consume data
 - -L = List metadata
