--- a/_posts/etc/2025-01-16-git-reset.md
+++ b/_posts/etc/2025-01-16-git-reset.md
@@ -55,6 +55,11 @@ git reset --mixed HEAD~1
 HEAD, 스테이징 영역, 작업 디렉토리 모두 지정된 커밋 상태로 완전히 되돌립니다.  
 변경 사항은 복구할 수 없으니, 신중히 사용해야 합니다.  
 
+<figure style="width: 100%" class="align-center">
+  <img src="{{ site.url }}{{ site.baseurl }}/assets/images/etc/git-reset-hard.png" alt="">
+  <figcaption></figcaption>
+</figure> 
+
 ```bash
 git reset --hard <커밋 ID>
 git reset --hard HEAD~1
